feat: add IntelliJ Platform test framework for memory subsystem
Add infrastructure for platform tests that exercise project service wiring
using real IntelliJ project instances with replaced services:

Infrastructure:
- MemoryPlatformTestCase: base class extending BasePlatformTestCase with
  utility methods for enabling memory, replacing MemoryService, and creating
  test stores backed by temp directories
- TestEmbeddingFactory: creates test EmbeddingService instances that bypass
  ONNX Runtime using fake inference functions
- MemoryService test constructor: package-private constructor accepting
  pre-built components (store, embedding, WAL, KG) to bypass lazy init

Platform tests (5 test classes, 30+ test methods):
- ServiceRegistrationPlatformTest: verifies all memory services resolve
  from the IntelliJ service container
- MemorySettingsPlatformTest: defaults, set/get, state round-trip
- MemoryServicePlatformTest: disabled returns null, test constructor
  wiring, effective wing detection, dispose lifecycle
- TurnMinerPlatformTest: tests doMine() via mineTurn() with replaced
  services — disabled returns EMPTY, enabled stores exchanges, respects
  maxDrawersPerTurn, minChunkLength, and custom wing settings
- BackfillMinerPlatformTest: tests doBackfill() via run() — no-sessions
  path, marks backfillCompleted, progress callbacks

Documentation:
- TESTING.md: new "IntelliJ Platform Tests" section with decision table
  for when to use platform tests vs JUnit 5, ServiceContainerUtil usage,
  MemoryPlatformTestCase API, and testability patterns reference

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>